Bug 129243 - "Application Colors" panel too wide on second opening
Summary: "Application Colors" panel too wide on second opening
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-12-06 15:54 UTC by Hussam Al-Tayeb
Modified: 2019-12-09 12:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
options panel (303.97 KB, image/png)
2019-12-06 15:54 UTC, Hussam Al-Tayeb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2019-12-06 15:54:16 UTC
Created attachment 156366 [details]
options panel

Version: 6.4.0.0.beta1+
Build ID: 61cd5e13368bf7511fef519d7cefaa43d6094cb6
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.utf8); UI-Language: en-US
Calc: threaded


Open libreffice writer.
Open options and go to Application colors.
Close the options dialog.
Open the options dialog and back to Application Colors.
Notice it is too wide.

Restarting libreoffice resets the size.
Comment 1 Hussam Al-Tayeb 2019-12-06 16:12:26 UTC
console says:
(soffice:800486): Gdk-WARNING **: 18:10:06.169: Native Windows wider or taller than 32767 pixels are not supported

Caolán, any idea?
Comment 2 Hussam Al-Tayeb 2019-12-06 17:11:20 UTC
And this as well:
(soffice:1396332): Gtk-CRITICAL **: 19:10:17.474: gtk_widget_set_size_request: assertion 'width >= -1' failed

(soffice:1396332): GLib-GObject-CRITICAL **: 19:10:25.411: g_object_ref: assertion 'G_IS_OBJECT (object)' failed
Comment 3 Xisco Faulí 2019-12-06 21:38:31 UTC
Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: b5a4570e214f0e965a8b32cee3c615856ae07ac4
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Xisco Faulí 2019-12-06 22:48:38 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2019-10-14 10:46:48 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-10-14 12:50:47 +0200
commit 42294bdf528934095d5314fe334324e708e9543c (patch)
tree 8619b1ac09043ecb693ef6398646eea4c2a59a94
parent 8715a067a3547cf91a3ed73fd893a621d5ee1a1c (diff)
Resolves: tdf#128132 language page not opened

Bisected with: bibisect-linux64-6.4

Adding Cc: Caolán McNamara
Comment 5 Caolán McNamara 2019-12-07 20:09:48 UTC
specific commit is innocent, was broken already I guess just didn't matter until then
Comment 6 Commit Notification 2019-12-08 20:23:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/235e1efd2fd938ac673a7c196a6264a0df5cfbc5

Resolves: tdf#129243 check return to see if results valid

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-12-09 08:53:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/79465546b7fe9af5efc320bfbef8d032042063c0

Resolves: tdf#129243 check return to see if results valid

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Hussam Al-Tayeb 2019-12-09 08:57:59 UTC
Thank you very much.
Comment 9 Xisco Faulí 2019-12-09 12:27:22 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 46a07f2042a812fc552e26736183c7d06fe6aa35
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!