Resolves: tdf#129243 check return to see if results valid

Change-Id: Ia4169cda3c1a596ceedd074dd0e59898f9c72ff9